[redhat] kernel-5.14.0-151.el9
Signed-off-by: Herton R. Krzesinski <herton@redhat.com>

--- a/redhat/kernel.changelog-9.1
+++ b/redhat/kernel.changelog-9.1
@@ -1,3 +1,83 @@
+* Mon Aug 22 2022 Herton R. Krzesinski <herton@redhat.com> [5.14.0-151.el9]
+- crypto: ccp - Fix device IRQ counting by using platform_irq_count() (Al Stone) [2071840]
+- amd-xgbe: Use platform_irq_count() (Al Stone) [2071840]
+- MAINTAINERS: adjust file entry for of_net.c after (Al Stone) [2071840]
+- rhel: CONFIG_OPEN_DICE is not set (Al Stone) [2071840]
+- of/irq: fix typo in comment (Al Stone) [2071840]
+- powerpc/powermac: constify device_node in of_irq_parse_oldworld() (Al Stone) [2071840]
+- of/fdt: Ignore disabled memory nodes (Al Stone) [2071840]
+- of: overlay: do not free changeset when of_overlay_apply returns error (Al Stone) [2071840]
+- of: overlay: unittest: add tests for overlay notifiers (Al Stone) [2071840]
+- of: overlay: add entry to of_overlay_action_name[] (Al Stone) [2071840]
+- of: overlay: rework overlay apply and remove kfree()s (Al Stone) [2071840]
+- of: overlay: rename variables to be consistent (Al Stone) [2071840]
+- of: overlay: do not break notify on NOTIFY_{OK|STOP} (Al Stone) [2071840]
+- mtd: phram: Allow probing via reserved-memory (Al Stone) [2071840]
+- of: Create platform devices for OF framebuffers (Al Stone) [2071840]
+- of: of_property_read_string return -ENODATA when !length (Al Stone) [2071840]
+- of/irq: Use interrupts-extended to find parent (Al Stone) [2071840]
+- device property: Convert device_{dma_supported,get_dma_attr} to fwnode (Al Stone) [2071840]
+- of/platform: Drop static setup of IRQ resource from DT core (Al Stone) [2071840]
+- cma: factor out minimum alignment requirement (Al Stone) [2071840]
+- Revert "of: base: Introduce of_alias_get_alias_list() to check alias IDs" (Al Stone) [2071840]
+- of: unittest: print pass messages at PR_INFO level (Al Stone) [2071840]
+- misc: open-dice: Add driver to expose DICE data to userspace (Al Stone) [2071840]
+- of: unittest: update text of expected warnings (Al Stone) [2071840]
+- of: Check 'of_node_reused' flag on of_match_device() (Al Stone) [2071840]
+- of: property: define of_property_read_u{8,16,32,64}_array() unconditionally (Al Stone) [2071840]
+- of: base: make small of_parse_phandle() variants static inline (Al Stone) [2071840]
+- mm: kmemleak: alloc gray object for reserved region with direct map (Al Stone) [2071840]
+- of: unittest: remove unneeded semicolon (Al Stone) [2071840]
+- of: base: Improve argument length mismatch error (Al Stone) [2071840]
+- of: base: Fix phandle argument length mismatch error message (Al Stone) [2071840]
+- of: unittest: re-implement overlay tracking (Al Stone) [2071840]
+- of: unittest: change references to obsolete overlay id (Al Stone) [2071840]
+- of: Move simple-framebuffer device handling from simplefb to of (Al Stone) [2071840]
+- of: unittest: 64 bit dma address test requires arch support (Al Stone) [2071840]
+- of: unittest: fix warning on PowerPC frame size warning (Al Stone) [2071840]
+- of/irq: Add a quirk for controllers with their own definition of interrupt-map (Al Stone) [2071840]
+- of: base: Skip CPU nodes with "fail"/"fail-..." status (Al Stone) [2071840]
+- of: property: fw_devlink: Fixup behaviour when 'node_not_dev' is set (Al Stone) [2071840]
+- of/irq: Don't ignore interrupt-controller when interrupt-map failed (Al Stone) [2071840]
+- of: Support using 'mask' in making device bus id (Al Stone) [2071840]
+- memblock: use memblock_free for freeing virtual pointers (Al Stone) [2071840]
+- memblock: rename memblock_free to memblock_phys_free (Al Stone) [2071840]
+- xen/x86: free_p2m_page: use memblock_free_ptr() to free a virtual pointer (Al Stone) [2071840]
+- memblock: drop memblock_free_early_nid() and memblock_free_early() (Al Stone) [2071840]
+- of/irq: Allow matching of an interrupt-map local to an interrupt controller (Al Stone) [2071840]
+- of: unittest: document intentional interrupt-map provider build warning (Al Stone) [2071840]
+- of: unittest: fix EXPECT text for gpio hog errors (Al Stone) [2071840]
+- of/unittest: Disable new dtc node_name_vs_property_name and interrupt_map warnings (Al Stone) [2071840]
+- x86/of: Kill unused early_init_dt_scan_chosen_arch() (Al Stone) [2071840]
+- of/unittest: Add of_node_put() before return (Al Stone) [2071840]
+- of: make of_node_check_flag() device_node parameter const (Al Stone) [2071840]
+- of: kobj: make of_node_is_(initialized|attached) parameters const (Al Stone) [2071840]
+- of: Add of_get_cpu_hwid() to read hardware ID from CPU nodes (Al Stone) [2071840]
+- ARM: 9119/1: amba: Properly handle device probe without IRQ domain (Al Stone) [2071840]
+- ARM: 9120/1: Revert "amba: make use of -1 IRQs warn" (Al Stone) [2071840]
+- soc: qcom: smem: Support reserved-memory description (Al Stone) [2071840]
+- net: of: fix stub of_net helpers for CONFIG_NET=n (Al Stone) [2071840]
+- of: net: add a helper for loading netdev->dev_addr (Al Stone) [2071840]
+- of: net: move of_net under net/ (Al Stone) [2071840]
+- of: remove duplicate declarations of __of_*_sysfs() functions (Al Stone) [2071840]
+- fbdev: simplefb: fix Kconfig dependencies (Al Stone) [2071840]
+- of, numa: Fetch empty NUMA node ID from distance map (Al Stone) [2071840]
+- of: restricted dma: Fix condition for rmem init (Al Stone) [2071840]
+- of: property: Disable fw_devlink DT support for X86 (Al Stone) [2071840]
+- of: Don't allow __of_attached_node_sysfs() without CONFIG_SYSFS (Al Stone) [2071840]
+- of: restricted dma: Don't fail device probe on rmem init failure (Al Stone) [2071840]
+- of: Move of_dma_set_restricted_buffer() into device.c (Al Stone) [2071840]
+- of: property: fw_devlink: Add support for "leds" and "backlight" (Al Stone) [2071840]
+- of: property: fw_devlink: Add support for "resets" and "pwms" (Al Stone) [2071840]
+- gpiolib: constify passed device_node pointer (Al Stone) [2071840]
+- of: unify of_count_phandle_with_args() arguments with !CONFIG_OF (Al Stone) [2071840]
+- of: Return success from of_dma_set_restricted_buffer() when !OF_ADDRESS (Al Stone) [2071840]
+- of: kexec: Remove FDT_PROP_* definitions (Al Stone) [2071840]
+- of: base: remove unnecessary for loop (Al Stone) [2071840]
+- of: Add plumbing for restricted DMA pool (Al Stone) [2071840]
+- of: Add stub for of_add_property() (Al Stone) [2071840]
+Resolves: rhbz#2071840
+
 * Fri Aug 19 2022 Herton R. Krzesinski <herton@redhat.com> [5.14.0-150.el9]
 - CI: Switch to c9s container image on quay.io (Michael Hofmann)
 - KVM: x86: nSVM: implement nested LBR virtualization (Emanuele Giuseppe Esposito) [2079722]
