[redhat] kernel-5.14.0-153.el9
Signed-off-by: Herton R. Krzesinski <herton@redhat.com>

--- a/redhat/kernel.changelog-9.1
+++ b/redhat/kernel.changelog-9.1
@@ -1,3 +1,49 @@
+* Tue Aug 23 2022 Herton R. Krzesinski <herton@redhat.com> [5.14.0-153.el9]
+- selftests: netfilter: add test case for nf trace infrastructure (Florian Westphal) [2112751]
+- netfilter: nf_tables: fix crash when nf_trace is enabled (Florian Westphal) [2112751]
+- netfilter: nf_log: incorrect offset to network header (Phil Sutter) [2067133]
+- netfilter: nf_log_syslog: Consolidate entry checks (Phil Sutter) [2067133]
+- netfilter: nf_log_syslog: Don't ignore unknown protocols (Phil Sutter) [2067133]
+- netfilter: nf_log_syslog: Merge MAC header dumpers (Phil Sutter) [2067133]
+- net/mlx4_en: use kzalloc (Mohammad Kabat) [2049443]
+- net/mlx4: Delete useless moduleparam include (Mohammad Kabat) [2049443]
+- RDMA/mlx4: remove redundant assignment to variable nreq (Mohammad Kabat) [2049443]
+- RDMA/mlx4: Delete useless module.h include (Mohammad Kabat) [2049443]
+- RDMA/mlx4: Don't continue event handler after memory allocation failure (Mohammad Kabat) [2049443]
+- net/mlx4: Use irq_update_affinity_hint() (Mohammad Kabat) [2049443]
+- RDMA/mlx4: Use bitmap_alloc() when applicable (Mohammad Kabat) [2049443]
+- net/mlx4_en: Fix an use-after-free bug in mlx4_en_try_alloc_resources() (Mohammad Kabat) [2049443]
+- net/mlx4_en: Update reported link modes for 1/10G (Mohammad Kabat) [2049443]
+- RDMA/mlx4: Do not fail the registration on port stats (Mohammad Kabat) [2049443]
+- net: convert users of bitmap_foo() to linkmode_foo() (Mohammad Kabat) [2049443]
+- RDMA/mlx4: Return missed an error if device doesn't support steering (Mohammad Kabat) [2049443]
+- ethernet: Remove redundant 'flush_workqueue()' calls (Mohammad Kabat) [2049443]
+- mlx4: constify args for const dev_addr (Mohammad Kabat) [2049443]
+- mlx4: remove custom dev_addr clearing (Mohammad Kabat) [2049443]
+- mlx4: replace mlx4_u64_to_mac() with u64_to_ether_addr() (Mohammad Kabat) [2049443]
+- mlx4: replace mlx4_mac_to_u64() with ether_addr_to_u64() (Mohammad Kabat) [2049443]
+- net/mlx4_en: avoid one cache line miss to ring doorbell (Mohammad Kabat) [2049443]
+- net/mlx4_en: Add XDP_REDIRECT statistics (Mohammad Kabat) [2049443]
+- net/mlx4: Use array_size() helper in copy_to_user() (Mohammad Kabat) [2049443]
+- net: mlx4: Add support for XDP_REDIRECT (Mohammad Kabat) [2049443]
+- net/mlx4_en: Don't allow aRFS for encapsulated packets (Mohammad Kabat) [2049443]
+- net/mlx4_en: Resolve bad operstate value (Mohammad Kabat) [2049443]
+- net/mellanox: switch from 'pci_' to 'dma_' API (Mohammad Kabat) [2049443]
+- net/mlx4: Use ARRAY_SIZE to get an array's size (Mohammad Kabat) [2049443]
+- net/mlx4: make the array states static const, makes object smaller (Mohammad Kabat) [2049443]
+- redhat: Use redhatsecureboot701 for ppc64le (Patrick Talbert) [2109211]
+- device property: Advertise fwnode and device property count API calls (Al Stone) [2102893]
+- device property: Fix recent breakage of fwnode_get_next_parent_dev() (Al Stone) [2102893]
+- device property: Use multi-connection matchers for single case (Al Stone) [2102893]
+- device property: Drop 'test' prefix in parameters of fwnode_is_ancestor_of() (Al Stone) [2102893]
+- device property: Introduce fwnode_for_each_parent_node() (Al Stone) [2102893]
+- device property: Allow error pointer to be passed to fwnode APIs (Al Stone) [2102893]
+- device property: Add irq_get to fwnode operation (Al Stone) [2102893]
+- device property: Add iomap to fwnode operations (Al Stone) [2102893]
+- device property: Convert device_{dma_supported,get_dma_attr} to fwnode (Al Stone) [2102893]
+- ARM: tegra: paz00: Handle device properties with software node API (Al Stone) [2102893]
+Resolves: rhbz#2112751, rhbz#2067133, rhbz#2049443, rhbz#2109211, rhbz#2102893
+
 * Mon Aug 22 2022 Herton R. Krzesinski <herton@redhat.com> [5.14.0-152.el9]
 - net/mlx5e: SHAMPO, reduce TIR indication (Mohammad Kabat) [2049450]
 - net/mlx5e: Lag, Only handle events from highest priority multipath entry (Mohammad Kabat) [2049450]
