[redhat] kernel-5.14.0-154.el9
Signed-off-by: Herton R. Krzesinski <herton@redhat.com>

--- a/redhat/kernel.changelog-9.1
+++ b/redhat/kernel.changelog-9.1
@@ -1,3 +1,82 @@
+* Tue Aug 23 2022 Herton R. Krzesinski <herton@redhat.com> [5.14.0-154.el9]
+- Revert "x86/sev: Expose sev_es_ghcb_hv_call() for use by HyperV" (John Allen) [2081424]
+- virt: sev-guest: Pass the appropriate argument type to iounmap() (John Allen) [2081424]
+- x86/boot: Fix the setup data types max limit (John Allen) [2081424]
+- x86/compressed/64: Add identity mappings for setup_data entries (John Allen) [2081424]
+- x86/Hyper-V: Add SEV negotiate protocol support in Isolation VM (John Allen) [2081424]
+- x86/sev: Mark the code returning to user space as syscall gap (John Allen) [2081424]
+- x86/sev: Annotate stack change in the #VC handler (John Allen) [2081424]
+- x86/sev: Remove duplicated assignment to variable info (John Allen) [2081424]
+- x86/sev: Fix address space sparse warning (John Allen) [2081424]
+- x86/sev: Get the AP jump table address from secrets page (John Allen) [2081424]
+- x86/sev: Add missing __init annotations to SEV init routines (John Allen) [2081424]
+- virt: sevguest: Rename the sevguest dir and files to sev-guest (John Allen) [2081424]
+- virt: sevguest: Change driver name to reflect generic SEV support (John Allen) [2081424]
+- x86/boot: Put globals that are accessed early into the .data section (John Allen) [2081424]
+- virt: sevguest: Fix bool function returning negative value (John Allen) [2081424]
+- virt: sevguest: Fix return value check in alloc_shared_pages() (John Allen) [2081424]
+- x86/sev: Unroll string mmio with CC_ATTR_GUEST_UNROLL_STRING_IO (John Allen) [2081424]
+- x86/sev-es: Replace open-coded hlt-loop with sev_es_terminate() (John Allen) [2081424]
+- virt: sevguest: Add documentation for SEV-SNP CPUID Enforcement (John Allen) [2081424]
+- virt: sevguest: Add support to get extended report (John Allen) [2081424]
+- virt: sevguest: Add support to derive key (John Allen) [2081424]
+- redhat/configs: enable CONFIG_SEV_GUEST (John Allen) [2081424]
+- virt: Add SEV-SNP guest driver (John Allen) [2081424]
+- x86/sev: Register SEV-SNP guest request platform device (John Allen) [2081424]
+- x86/sev: Provide support for SNP guest request NAEs (John Allen) [2081424]
+- x86/sev: Add a sev= cmdline option (John Allen) [2081424]
+- x86/sev: Use firmware-validated CPUID for SEV-SNP guests (John Allen) [2081424]
+- x86/sev: Add SEV-SNP feature detection/setup (John Allen) [2081424]
+- x86/compressed/64: Add identity mapping for Confidential Computing blob (John Allen) [2081424]
+- x86/compressed: Export and rename add_identity_map() (John Allen) [2081424]
+- x86/compressed: Use firmware-validated CPUID leaves for SEV-SNP guests (John Allen) [2081424]
+- x86/compressed: Add SEV-SNP feature detection/setup (John Allen) [2081424]
+- x86/boot: Add a pointer to Confidential Computing blob in bootparams (John Allen) [2081424]
+- x86/compressed/64: Add support for SEV-SNP CPUID table in #VC handlers (John Allen) [2081424]
+- x86/sev: Move MSR-based VMGEXITs for CPUID to helper (John Allen) [2081424]
+- KVM: x86: Move lookup of indexed CPUID leafs to helper (John Allen) [2081424]
+- x86/boot: Add Confidential Computing type to setup_data (John Allen) [2081424]
+- x86/compressed/acpi: Move EFI kexec handling into common code (John Allen) [2081424]
+- x86/compressed/acpi: Move EFI vendor table lookup to helper (John Allen) [2081424]
+- x86/compressed/acpi: Move EFI config table lookup to helper (John Allen) [2081424]
+- x86/compressed/acpi: Move EFI system table lookup to helper (John Allen) [2081424]
+- x86/compressed/acpi: Move EFI detection to helper (John Allen) [2081424]
+- x86/head/64: Re-enable stack protection (John Allen) [2081424]
+- x86/sev: Use SEV-SNP AP creation to start secondary CPUs (John Allen) [2081424]
+- x86/mm: Validate memory when changing the C-bit (John Allen) [2081424]
+- x86/kernel: Validate ROM memory before accessing when SEV-SNP is active (John Allen) [2081424]
+- x86/kernel: Mark the .bss..decrypted section as shared in the RMP table (John Allen) [2081424]
+- x86/sev: Add helper for validating pages in early enc attribute changes (John Allen) [2081424]
+- x86/sev: Register GHCB memory when SEV-SNP is active (John Allen) [2081424]
+- x86/compressed: Register GHCB memory when SEV-SNP is active (John Allen) [2081424]
+- x86/compressed: Add helper for validating pages in the decompression stage (John Allen) [2081424]
+- x86/sev: Check the VMPL level (John Allen) [2081424]
+- x86/sev: Add a helper for the PVALIDATE instruction (John Allen) [2081424]
+- x86/sev: Check SEV-SNP features support (John Allen) [2081424]
+- x86/sev: Save the negotiated GHCB version (John Allen) [2081424]
+- x86/sev: Define the Linux-specific guest termination reasons (John Allen) [2081424]
+- x86/mm: Extend cc_attr to include AMD SEV-SNP (John Allen) [2081424]
+- x86/sev: Detect/setup SEV/SME features earlier in boot (John Allen) [2081424]
+- x86/compressed/64: Detect/setup SEV/SME features earlier during boot (John Allen) [2081424]
+- x86/boot: Use MSR read/write helpers instead of inline assembly (John Allen) [2081424]
+- x86/boot: Introduce helpers for MSR reads/writes (John Allen) [2081424]
+- KVM: SVM: Update the SEV-ES save area mapping (John Allen) [2081424]
+- KVM: SVM: Create a separate mapping for the GHCB save area (John Allen) [2081424]
+- KVM: SVM: Create a separate mapping for the SEV-ES save area (John Allen) [2081424]
+- KVM: SVM: Define sev_features and vmpl field in the VMSA (John Allen) [2081424]
+- x86/mm/cpa: Generalize __set_memory_enc_pgtable() (John Allen) [2081424]
+- x86/coco: Add API to handle encryption mask (John Allen) [2081424]
+- x86/cc: Move arch/x86/{kernel/cc_platform.c => coco/core.c} (John Allen) [2081424]
+- x86/sev: Move common memory encryption code to mem_encrypt.c (John Allen) [2081424]
+- x86/sev: Rename mem_encrypt.c to mem_encrypt_amd.c (John Allen) [2081424]
+- x86/sev: Remove do_early_exception() forward declarations (John Allen) [2081424]
+- x86/head64: Carve out the guest encryption postprocessing into a helper (John Allen) [2081424]
+- x86/sev: Get rid of excessive use of defines (John Allen) [2081424]
+- x86/sev: Shorten GHCB terminate macro names (John Allen) [2081424]
+- x86/sev: Make the #VC exception stacks part of the default stacks storage (John Allen) [2081424]
+- tools headers UAPI: Synch KVM's svm.h header with the kernel (John Allen) [2081424]
+Resolves: rhbz#2081424
+
 * Tue Aug 23 2022 Herton R. Krzesinski <herton@redhat.com> [5.14.0-153.el9]
 - selftests: netfilter: add test case for nf trace infrastructure (Florian Westphal) [2112751]
 - netfilter: nf_tables: fix crash when nf_trace is enabled (Florian Westphal) [2112751]
